@@ -9,9 +9,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 @Service
 @RequiredArgsConstructor
@@ -48,7 +46,15 @@ public class UserServiceImpl implements UserService {
         user.setSurname(userDto.getSurname());
         user.setName(userDto.getName());
         user.setPatronymic(userDto.getPatronymic());
-        user.setRole(Collections.singleton(Role.TEACHER));
+        
+        if(userDto.isAdmin()) {
+            user.setRole(Set.of(Role.ADMIN, Role.TEACHER));
+            System.out.println("Родился админом");
+        }else {
+            user.setRole(Collections.singleton(Role.TEACHER));
+            System.out.println("не Родился админом");
+        }
+        
         user.setDisciplines(userDto.getDisciplines());
         userRepo.save(user);
         
@@ -61,17 +67,27 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public void update(User user) {
+    public void update(User user, boolean isAdmin) {
         User updatedUser = userRepo.findById(user.getId()).orElse(null);
         if (updatedUser == null) {
             throw new IllegalArgumentException("Пользователь не найден");
         }
         updatedUser.setLogin(user.getLogin());
-        updatedUser.setPassword(encoder.encode(user.getPassword()));
+        if (user.getPassword() != null && !user.getPassword().isEmpty()) {
+            updatedUser.setPassword(encoder.encode(user.getPassword()));
+        }
         updatedUser.setSurname(user.getSurname());
         updatedUser.setName(user.getName());
         updatedUser.setPatronymic(user.getPatronymic());
         updatedUser.setDisciplines(user.getDisciplines());
+        if(isAdmin) {
+            updatedUser.setRole(new HashSet<>(Set.of(Role.ADMIN, Role.TEACHER)));
+            System.out.println("стал админом");
+        }else {
+            updatedUser.setRole(new HashSet<>(Collections.singleton(Role.TEACHER)));
+            System.out.println("не стал админом");
+        }
+        
         userRepo.save(updatedUser);
     }
 }
